[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/back_button/BackButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/crt_layer/CRTLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/GravityBold8.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://theme/Main.tres" type="Theme" id=4]
[ext_resource path="res://scenes/option_spinbox/OptionSpinbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game_setup/GameSetup.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="GameSetup" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0
theme = ExtResource( 4 )
custom_constants/margin_right = 150
custom_constants/margin_top = 50
custom_constants/margin_left = 150
custom_constants/margin_bottom = 50
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRTLayer" parent="." instance=ExtResource( 2 )]

[node name="VSplitContainer" type="VSplitContainer" parent="."]
margin_left = 150.0
margin_top = 50.0
margin_right = 650.0
margin_bottom = 450.0
split_offset = 400
dragger_visibility = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_right = 500.0
margin_bottom = 356.0

[node name="TitleContainer" type="MarginContainer" parent="VSplitContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 78.0
custom_constants/margin_bottom = 30

[node name="TitleLabel" type="Label" parent="VSplitContainer/VBoxContainer/TitleContainer"]
margin_right = 500.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "2P match"
align = 1

[node name="GamePointsOption" parent="VSplitContainer/VBoxContainer" instance=ExtResource( 5 )]
title = "Game points"
min_value = 1

[node name="MatchGamesOption" parent="VSplitContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 118.0
margin_bottom = 150.0
title = "Match games"
min_value = 1

[node name="DeuceOption" type="CheckButton" parent="VSplitContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 500.0
margin_bottom = 194.0
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 3
custom_styles/hover_pressed = SubResource( 2 )
pressed = true
action_mode = 0
text = "Deuce Rules"

[node name="HBoxContainer3" type="HBoxContainer" parent="VSplitContainer"]
margin_top = 368.0
margin_right = 500.0
margin_bottom = 400.0

[node name="BackButton" parent="VSplitContainer/HBoxContainer3" instance=ExtResource( 1 )]
margin_top = 16.0
margin_bottom = 32.0
focus_neighbour_left = NodePath(".")
size_flags_vertical = 8

[node name="PlayButton" type="Button" parent="VSplitContainer/HBoxContainer3"]
margin_left = 388.0
margin_right = 500.0
margin_bottom = 32.0
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 10
text = "Play"
align = 2
[connection signal="value_changed" from="VSplitContainer/VBoxContainer/GamePointsOption" to="." method="_on_GamePointsOption_value_changed"]
[connection signal="value_changed" from="VSplitContainer/VBoxContainer/MatchGamesOption" to="." method="_on_MatchGamesOption_value_changed"]
[connection signal="toggled" from="VSplitContainer/VBoxContainer/DeuceOption" to="." method="_on_DeuceOption_toggled"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer3/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer3/PlayButton" to="." method="_on_PlayButton_pressed"]
